<resources>
    <string name="app_name">tip_calculator</string>
    <string name="tip_time">tip time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing(20%)</string>
    <string name="good_service">Good(18%)</string>
    <string name="ok_service">Okay(15%)</string>
    <string name="round_up_tip">Round up tip</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="tip_result">tip result</string>
    <string name="invalid_cost">invalid cost</string>
</resources>