<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="408dp"
        android:layout_height="31dp"
        android:text="@string/tip_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_ed_lbl"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginHorizontal="20dp"
        android:hint="cost"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/how_was_the_service"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost_ed_lbl" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/amazing_20_rb"
            android:layout_width="258dp"
            android:layout_height="62dp"
            android:checked="true"
            android:text="@string/amazing_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <RadioButton
            android:id="@+id/good_18_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amazing_20_rb" />

        <RadioButton
            android:id="@+id/okey_15_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/good_18_rb" />
    </RadioGroup>

    <Switch
        android:id="@+id/round_up_sw"
        android:layout_width="375dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:checked="true"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_options"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculate_btn"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="29dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_up_sw" />

    <TextView
        android:id="@+id/cost_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/tip_result"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>